src/pages/styles/lineup.module.css
.wrapper {
  max-width: 100%;
  margin: 0 auto;
  margin-bottom: 20px;
  padding: 0 10px;
}

  .wrapper h2 {
    color: #F0986B;
    font-family: 'Oswald';
    font-weight: 400;
    text-transform: uppercase;
  }

.artistWrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
}

.tijdWrapper {
  padding: 0 20px;
}

.dayRow {
  width: 100%;
  display: flex;
}

.stageColumn {
  width: 32%;
  flex-direction: column;
}

.artistWrapper::after {
  content: "";
  width: 48%;
}

  .artistWrapper img {
    width: 100%;
  }
  
  @media only screen and (max-width: 730px) {
    .dayRow {
      flex-direction: column;
    }
  }

